misapps/apps/area1/app1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
      environment: pruebas
  template:
    metadata:
      labels:
        app: app1
        environment: pruebas
    spec:
      containers:
      - name: app1-container
        image: registry.access.redhat.com/ubi8/httpd-24:1-299
        ports:
        - containerPort: 8080
