misapps/apps/area1/app1/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service-pruebas
spec:
  selector:
    app: app1
    environment: pruebas
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
